potential flickering fix -home hover

--- a/src/styles/components/_casestudy-featured.scss
+++ b/src/styles/components/_casestudy-featured.scss
@@ -77,6 +77,8 @@
     transition: opacity 200ms cubic-bezier(.26, 0, .34, 1);
   }
   .casestudy-featured__info {
+    @include prefixer(transform, translateZ(0), true, true, false);
+    transform: translateZ(0);
     position: absolute;
     left: 24px;
     bottom: 24px;
